# ros2_ws

./: .gitmodules
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: end_effector_pose_.py  exercise1.ipynb  nav2_test.py  simple_commander_api_template.py
src/MobileRobotics2025/my_controller/: CMakeLists.txt
src/actions_py/: setup.py
src/actions_py/actions_py/: count_until_client.py  count_until_server.py
src/controller_interfaces/: CMakeLists.txt
src/dummy_description/: CMakeLists.txt
src/dummy_description/config/: example_controllers.yaml
src/dummy_description/launch/: dummy_robot.launch.py
src/dummy_description/rviz/: display.rviz
src/dummy_description/urdf/: gazebo.xacro
src/dummy_gazebo/: CMakeLists.txt
src/dummy_gazebo/rviz/: display.rviz
src/dummy_gazebo/scripts/: teleop.py
src/example_description/scripts/: robot_tf2_listener.py
src/lab1/launch/: lab1-execute-process.launch.py  simple-param.launch.py
src/lab1/scripts/: noise_generator.py
src/lecture2/: CMakeLists.txt  package.xml
src/lecture2/scripts/: turtlesimplus_controller.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  (+9 more)
src/my_py_pkg/: package.xml  setup.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_description/: CMakeLists.txt
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/msg/: Turtle.msg
src/my_robot_interfaces/srv/: CatchTurtle.srv
src/turtle_bringup/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/: setup.py
(+165 files in other folders)
